# coinpaprika-api-python-client

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: main.yaml
coinpaprika/: client.py  exceptions.py
examples/: examples.py
tests/: test_api_request.py
