[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools"]
build-backend="setuptools.build_meta"

[project]
name = "coinpaprika-sdk"
version = "1.0.0"
authors = [
  { name="coinpaprika", email="it@coinpaprika.com" },
]
description = "Official coinpaprika API Python client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/coinpaprika/coinpaprika-api-python-client"
"Bug Tracker" = "https://github.com/coinpaprika/coinpaprika-api-python-client/issues"